# gibra

./: CHANGELOG.md  Cargo.toml  README.md  demo.tape
src/: main.rs
src/skim/: ansi.rs  field.rs  global.rs  header.rs  input.rs  item.rs  matcher.rs  mod.rs  model.rs  options.rs  orderedvec.rs  output.rs  prelude.rs  previewer.rs  query.rs  reader.rs  selection.rs  theme.rs  util.rs
src/skim/engine/: all.rs  andor.rs  exact.rs  factory.rs  fuzzy.rs  regexp.rs
src/skim/helper/: item.rs  item_reader.rs  selector.rs
