[package]
name = "git-co"
version = "0.3.1"
edition = "2021"
license-file = "LICENSE"
description = "A command-line tool for simplified git branch checkout."
homepage = "https://github.com/ne-oki/git-co"
repository = "https://github.com/ne-oki/git-co"
readme = "README.md"
keywords = ["git", "branch", "checkout", "cli"]

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
git2 = "0.17.1"
skim = "0.10.4"
