[package]
name = "gibra"
version = "0.3.1"
edition = "2021"
license-file = "LICENSE"
description = "A command-line tool for simplified git branch checkout."
homepage = "https://github.com/ne-oki/gibra"
repository = "https://github.com/ne-oki/gibra"
readme = "README.md"
keywords = ["git", "branch", "checkout", "cli"]

[dependencies]
beef = "0.5.2"
bitflags = "1.3.2"
chrono = "0.4.38"
clap = { version = "4.3.0", features = ["derive"] }
crossbeam = "0.8.4"
defer-drop = "1.3.0"
derive_builder = "0.20.0"
fuzzy-matcher = "0.3.7"
git2 = "0.17.1"
lazy_static = "1.4.0"
log = "0.4.21"
nix = "0.28.0"
rayon = "1.10.0"
regex = "1.10.4"
timer = "0.2.0"
tuikit = "0.5.0"
unicode-width = "0.1.12"
vte = "0.13.0"
